# safelens-image

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  INSTALL.md  README.md  example.py  main.py  openapi.yml  pyproject.toml  shit.py
.github/workflows/: deploy.yml
src/: __init__.py  anonymizer.py  api.py  config.py  gemini_detector.py  image_generator.py  models.py  pipeline.py  s3_storage.py  settings.py
src/config/: __init__.py  constants.py  logger.py  settings.py
src/pipeline/: __init__.py  anonymizer.py  gemini_detector.py  image_generator.py  pipeline.py
test/: example.py  reset_example.bash
tests/: test_pipeline.py
utils/: example.py  reset.bash  view_models.py
